--- a/src/project/templates/rest_framework/base.html
+++ b/src/project/templates/rest_framework/base.html
@@ -3,41 +3,41 @@
 {% load static %}
 {% load rest_framework %}
 
-
-
 {% block bootstrap_theme %}
     <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
+          crossorigin="anonymous">
 
-<!-- Optional theme -->
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap-theme.min.css" crossorigin="anonymous">
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap-theme.min.css"
+          crossorigin="anonymous">
 {% endblock %}
 
 {% block navbar %}
-        <div class="navbar navbar-static-top {% block bootstrap_navbar_variant %}navbar-inverse{% endblock %}"
-             role="navigation" aria-label="{% trans "navbar" %}">
-          <div class="container">
+    <div class="navbar navbar-static-top {% block bootstrap_navbar_variant %}navbar-inverse{% endblock %}"
+         role="navigation" aria-label="{% trans "navbar" %}">
+        <div class="container">
             <span>
               {% block branding %}
-                <a class="navbar-brand" rel="nofollow" href="#">
-        <img src="{% static 'img/logo.svg' %}" style="height: 20px;"/>
-    </a>
-    <a class="navbar-brand" rel="nofollow" href="#">
-    Screenshotter
-    </a>
+                  <a class="navbar-brand" rel="nofollow" href="#">
+                    <img src="{% static 'img/logo.svg' %}" style="height: 20px;"/>
+                  </a>
+                  <a class="navbar-brand" rel="nofollow" href="#">
+                    Screenshotter &#x1f4f7;&#x1f5bc;
+                  </a>
               {% endblock %}
             </span>
             <ul class="nav navbar-nav pull-right">
-              {% block userlinks %}
-                {% if user.is_authenticated %}
-                    {% if user.is_staff %}<li><a href="/admin/">Admin</a></li>{% endif %}
-                  {% optional_logout request user %}
-                {% else %}
-                  {% optional_login request %}
-                {% endif %}
-              {% endblock %}
+                {% block userlinks %}
+                    {% if user.is_authenticated %}
+                        {% if user.is_staff %}
+                            <li><a href="/admin/">Admin</a></li>{% endif %}
+                        {% optional_logout request user %}
+                    {% else %}
+                        {% optional_login request %}
+                    {% endif %}
+                {% endblock %}
             </ul>
-
-          </div>
         </div>
-      {% endblock %}
+    </div>
+{% endblock %}
